@@ -1,5 +1,5 @@
 TinyMUX 2.7:  CHANGES
-Last Update:  August 2007
+Last Update:  September 2007
 
 Major changes that may affect performance and require softcode tweaks:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -71,6 +71,11 @@ Feature Additions:
  -- Add multi-whisper and last whisper (Issue 18 and 28).
  -- Sort @malias/list.
  -- Add third argument to tel() (Issue 153).
+ -- Add @folder and update @mail/list for mail folders (Issue 256).
+ -- Add CServerEventsSource, IServerEventsControl, and
+    IServerEventsSink so modules can catch server events.
+ -- Add crash_message configuration option (Issue 223).
+ -- Add channel @saystring and @speechmod (Issue 67).
 
 
 Bug Fixes:
@@ -144,6 +149,7 @@ Bug Fixes:
  -- Add no_name to HASFLAG() list (Issue 360).
  -- Fix the attribute flag names returned by lflags() (Issue 362).
  -- Add missing attribute flag names to @set2 topic (Issue 361).
+ -- Fix LOG_DIR across @restarts (Issue 46).
 
 
 Performance Enhancements:
